<resources>
    <string name="app_name">FootballApp-KADE</string>
    <string name="prev_match">Prev Match</string>
    <string name="next_match">Next Match</string>
    <string name="lineups">Lineups</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="midlefield">Midlefield</string>
    <string name="forward">Forward</string>
    <string name="subtituties">Subtituties</string>
    <string name="versus">VS</string>
    <string name="hometeam">homeTeam</string>
    <string name="awayteam">awayTeam</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="defense">Defense</string>
    <string name="teamFavorite">Favourite</string>
    <string name="teams">Teams</string>
    <string name="match">Match</string>
    <string name="strip">-</string>
    <string name="vs">VS</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="midfield">Midfield</string>
    <string name="subtitutes">Subtituties</string>
    <string name="fouls">Fouls</string>
    <string name="yellowcard">Yellowcard</string>
    <string name="redcard">Redcard</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="back">Tekan KEMBALI sekali lagi untuk keluar</string>

    <array name="league">
        <item>English Premier League</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
        <item>Dutch Eredivisie</item>
        <item>Russian Football Premier League</item>
    </array>

</resources>